--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AfFWEGFAAJIpaygygKSxHgs34GthJl7q4zjdPYk0lA03xpEEM-XyDmYdQahbvm_G7ehpgJ9vvKf368XL&currency=USD&buyer-country=US"></script>
   </body>
 </html>
